<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_dicoding"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/dicoding"
        android:layout_marginTop="60dp"
        android:alpha="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/halo_user"
        android:textStyle="bold"
        android:textSize="20sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@id/iv_dicoding" />


    <TextView
        android:id="@+id/tv_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/join_with_us"
        android:textSize="20sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@id/tv_halo" />

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:padding="12dp"
        android:hint="@string/name"
        android:autofillHints="name"
        android:background="@drawable/bg_edittext"
        android:inputType="text"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/tv_join"/>



    <com.zell.intermediatesubmission.ui.custom.CustomEmailEd
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:inputType="text"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name" />

    <com.zell.intermediatesubmission.ui.custom.CustomPasswordEd
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:enabled="false"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:text="@string/register"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>